# RL

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  exp_r060_perf_yaml_full_lyris.sh  exp_r060_perf_yaml_full_oci.sh  lyris_cg_sbatch.sh  lyris_nocg_sbatch.sh  lyris_setup_cg.sh  lyris_setup_nocg.sh  pyproject.toml  pyrefly.toml  ray.sub
.claude/skills/code-style/: SKILL.md
.claude/skills/config-conventions/: SKILL.md
.claude/skills/copyright/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/review-pr/: SKILL.md  advanced.md
.claude/skills/testing/: SKILL.md
.github/actions/test-template/: action.yml
.github/workflows/: _healthcheck_vm.yml  _pr_comment.yml  _submodule_check.yml  automodel-submodule-checks.yml  build-test-publish-wheel.yml  cicd-main.yml  claude-review.yml  detect-secrets.yml  healthcheck_vms.yml  mbridge-deps-sync.yml  pr-checks-comment.yml  release-docs.yml  release-freeze.yml
.github/workflows/config/: .secrets.baseline
docker/: Dockerfile  Dockerfile.ngc_pytorch
docs/: adding-new-models.md  broken_links_false_positives.json  ci-cd.md  conf.py  debugging.md  docker.md  fp8.md  index.md  nsys-profiling.md  project.json  testing.md  versions1.json
docs/about/: features.md  installation.md  model-support.md  performance-summary.md
docs/about/algorithms/: index.md
docs/design-docs/: checkpointing.md  generation.md  logger.md  training-backends.md
docs/guides/: dpo.md  eagle3-speculative-decoding.md  environments.md  ft-launcher-guide.md  grpo-audio.md  grpo.md  muon-optimizer.md  nemotron-3-nano.md  prorlv2.md  sft-openmathinstruct2.md  sft.md  use-custom-vllm.md  yarn-long-context.md
examples/: run_eval.py  run_grpo.py
examples/configs/: audio_grpo_3B_megatron.yaml  distillation_math.yaml  distillation_math_megatron.yaml  dpo.yaml  gdpo_math_1B.yaml  grpo_math_1B.yaml  grpo_math_1B_megatron.yaml  grpo_math_1B_sglang.yaml  grpo_math_nemotron_nano_megatron.yaml  prorlv2_1_moe.yaml  rm.yaml  sft.yaml  sft_openmathinstruct2.yaml  sft_openmathinstruct2_megatron.yaml  vlm_grpo_3B.yaml  vlm_grpo_3B_megatron.yaml
examples/configs/evals/: mmau.yaml
examples/converters/: convert_dcp_to_hf.py  convert_lora_to_hf.py  convert_megatron_to_hf.py
examples/nemo_gym/: grpo_nanov3.yaml  grpo_workplace_assistant_nemotron_nano_v2_9b.yaml
experiments/cuda_graph/: EXPERIMENT_GUIDE.md  README.md
infra/nrl_k8s/examples/: qwen3_30b_math_4n_4gpu.gb300.infra.yaml
nemo_rl/: package_info.py
nemo_rl/algorithms/: advantage_estimator.py  async_utils.py  distillation.py  dpo.py  greso.py  grpo.py  rm.py  sft.py  utils.py
nemo_rl/algorithms/loss/: __init__.py  interfaces.py  loss_functions.py  utils.py  wrapper.py
nemo_rl/data/: __init__.py  collate_fn.py  dataloader.py  interfaces.py  llm_message_utils.py  multimodal_utils.py  processors.py  utils.py
nemo_rl/data/datasets/: processed_dataset.py  raw_dataset.py  utils.py
nemo_rl/distributed/: batched_data_dict.py  model_utils.py  ray_actor_environment_registry.py  worker_group_utils.py  worker_groups.py
nemo_rl/environments/: interfaces.py  math_environment.py  nemo_gym.py  utils.py  vlm_environment.py
nemo_rl/evals/: eval.py
nemo_rl/experience/: early_stop_generation.py  length_aware_batching.py  rollout_manager.py  rollouts.py
nemo_rl/models/automodel/: checkpoint.py  config.py  data.py  setup.py  train.py
nemo_rl/models/dtensor/: parallelize.py
nemo_rl/models/generation/: __init__.py
nemo_rl/models/megatron/: community_import.py  config.py  data.py  setup.py  train.py
nemo_rl/models/policy/: __init__.py  lm_policy.py  utils.py
nemo_rl/utils/: checkpoint.py  config.py  logger.py
research/: README.md
research/template_project/: README.md  pyproject.toml  single_update.py
research/template_project/configs/: grpo_math_1B.yaml
research/template_project/template_project/: worker_extension.py
skills/build-and-dependency/: SKILL.md
skills/cicd/: SKILL.md
skills/code-style/: SKILL.md
skills/config-conventions/: SKILL.md
skills/contributing/: SKILL.md
skills/copyright/: SKILL.md
skills/docs/: SKILL.md
skills/error-handling/: SKILL.md
skills/launch-nemo-rl/: SKILL.md
skills/linting-and-formatting/: SKILL.md
skills/review-pr/: SKILL.md
skills/testing/: SKILL.md
tests/: check_metrics.py
tests/functional/: L1_Functional_Tests_GPU.sh  audio_grpo_megatron.sh  distillation.sh  dpo_megatron_lora.sh  eval_audio.sh  gdpo.sh  gdpo_async_grpo.sh  grpo.sh  grpo_async_gym.sh  grpo_fsdp2.sh  grpo_megatron_eagle3_online.sh  grpo_multiple_dataloaders.sh  grpo_multiturn.sh  grpo_non_colocated.sh  sft_avlm.sh  test_converter_roundtrip.py  test_decode_vs_prefill.sh  vlm_grpo.sh
tests/test_suites/: disabled.txt  nightly.txt  nightly_gb200.txt  nightly_mcore.txt  nightly_mcore_gb200.txt  performance_gb200.txt  performance_h100.txt  release.txt
tests/test_suites/llm/: distillation-qwen3-32b-to-1.7b-base-1n4g-fsdp2tp1.v1.sh  distillation-qwen3-32b-to-1.7b-base-1n4g-megatron-tp1pp2cp2-pack.sh  distillation-qwen3-32b-to-1.7b-base-1n8g-fsdp2tp1.v1.sh  distillation-qwen3-32b-to-1.7b-base-1n8g-megatron-tp2pp2cp2-pack.sh  distillation-qwen3-32b-to-4b-base-2n8g-fsdp2tp2-seqpack.v1.sh  dpo-llama3.2-1b-instruct-1n4g-fsdp2tp1.v2.sh  dpo-nanov3-30B3AB-1n4g-fsdp4ep4-automodel.sh  dpo-nanov3-30B3AB-1n8g-fsdp8ep8-automodel.sh  dpo-qwen2.5-math7b-1n8g-megatron_chunked_linear_ce_loss.sh  grpo-dapomath17k-dsv3-32n4g-megatron.sh  grpo-dapomath17k-dsv3-megatron.sh  grpo-gemma3-1b-it-1n4g-fsdp2tp1.sh  grpo-gspo-deepscaler-1.5b-8K.sh  (+30 more)
tests/unit/: L0_Unit_Tests_Other.sh  L0_Unit_Tests_Policy.sh  conftest.py  excluded_unit_tests.sh  prepare_unit_test_assets.py  test_config_validation.py  test_recipes_and_test_suites.py
tools/: build-custom-flashinfer.sh  build-custom-vllm.sh  check_mbridge_deps.py  config_cli.py  generate_r060_cg_perf_yamls.py  launch
tools/model_diagnostics/: 2.long_generation_decode_vs_prefill.py  4.vllm_precision_compilation_test.py  5.prefix_caching_nan.py
(+215 files in other folders)
