[build-system]
requires = ["setuptools>=42", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nemo_rl"]

[tool.setuptools.dynamic]
version = { attr = "nemo_rl.__version__" }                      # any module attribute compatible with ast.literal_eval
readme = { file = "README.md", content-type = "text/markdown" }

[project]
name = "nemo-rl"
dynamic = ["version", "readme"]
description = "NeMo RL: A Scalable and Efficient Post-Training Library for Models Ranging from 1 GPU to 1000s, and from Tiny to >100B Parameters"
requires-python = ">=3.13.11"
license = { text = "Apache 2.0" }
dependencies = [
  "setuptools",
  "pip",                                                                                                              # Required for frozen environments; uv venv --seed may not reliably install pip
  "ninja",                                                                                                            # for flash-attn parallel build
  "torch==2.10.0",
  "triton; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
  "colored==2.2.3",
  "ray[default]==2.54.0",
  "wandb>=0.25.1",
  "numpy",
  "datasets>=4.0.0",
  "rich",
  "math-verify",
  "accelerate>=0.26",
  "tensorboard",
  "omegaconf",
  "torchdata",
  "nvidia-ml-py",
  "hydra-core",
  "tiktoken",
  "blobfile",
  "debugpy",
  "nvtx",
  "matplotlib",
  "plotly",
  "sympy>=1.14.0",
  "pillow>=12.1.1",
  "torchvision==0.25.0",
  "transformers==5.3.0",
  "num2words>=0.5.14",                                                                                                # for SmolVLM
  "mlflow>=3.9.0rc0",
  "nvidia-nvshmem-cu12; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')", # for deep_ep build
  "swanlab",
  "pyzmq",
  "decord2",

  "nccl4py",                      # for non-colocated refit
  "cuda-bindings",                # for non-colocated refit
  "pybase64",                     # for sglang refit
  "nvidia-cudnn-cu12==9.19.0.56", # for transformer-engine no build isolation
  # nvidia-resiliency-ext removed: no Python 3.13 wheels available (v0.5.0 only has cp310-cp312)
]

[project.optional-dependencies]
fsdp = ["flash-attn==2.8.1", "mamba-ssm", "causal-conv1d"]
automodel = [
  "nemo-automodel[moe]",
  # Flash-attn version should be selected to satisfy both TE + vLLM requirements (xformers in particular)
  # https://github.com/NVIDIA/TransformerEngine/blob/v2.3/transformer_engine/pytorch/attention/dot_product_attention/utils.py#L108
  # https://github.com/facebookresearch/xformers/blob/8354497deb2c04c67fbb2e2ad911e86530da0e90/xformers/ops/fmha/flash.py#L76
  "flash-attn==2.8.1",
  "transformers>=5.3.0",
  "mamba-ssm",
  "causal-conv1d",
  "nv-grouped-gemm",
  "transformer-engine[pytorch]>=2.9.0a0,<2.12.0",
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@bfded34800dfec415b71503f8205181de90b2480 ; platform_machine == 'x86_64'",
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@7febc6e25660af0f54d95dd781ecdcd62265ecca ; platform_machine == 'aarch64'",
]
vllm = [
  "cuda-python",
  "deep_gemm @ git+https://github.com/deepseek-ai/DeepGEMM.git@7b6b5563b9d4c1ae07ffbce7f78ad3ac9204827c",
  # deep_ep also needs libibverbs-dev
  # sudo apt-get update
  # sudo apt-get install libibverbs-dev
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@bfded34800dfec415b71503f8205181de90b2480 ; platform_machine == 'x86_64'",
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@7febc6e25660af0f54d95dd781ecdcd62265ecca ; platform_machine == 'aarch64'",
  "vllm==0.17.1",
  "num2words>=0.5.14",
  "flashinfer-python==0.6.4",
  "nvidia-cutlass-dsl>=4.4.0.dev1",
]
sglang = [
  "sglang",
  "sgl-kernel", # Must be a direct dep so [tool.uv.sources] VCS override applies (transitive deps don't use sources)
]
mcore = [
  # also need cudnn (https://developer.nvidia.com/cudnn-downloads?target_os=Linux&target_arch=x86_64&Distribution=Ubuntu&target_version=20.04&target_type=deb_network)
  # wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/cuda-keyring_1.1-1_all.deb
  # sudo dpkg -i cuda-keyring_1.1-1_all.deb
  # sudo apt-get update
  # sudo apt-get install cudnn-cuda-12

  # This dependency also needs to be compatible with the spec in Megatron-Bridge/pyproject.toml.
  # It is specified here since we don't directly use Megatron-Bridge/pyproject.toml, but a proxy setup.py+pyproject.toml combo
  # outside to allow "optionally" installing the megatron path. It's simpler to deal with transformer-engine here in the NeMo RL pyproject.toml
  "transformer-engine[pytorch]==2.12.0",
  "megatron-core",
  "megatron-bridge",
  # Flash-attn version should be selected to satisfy both TE + vLLM requirements (xformers in particular)
  # https://github.com/NVIDIA/TransformerEngine/blob/v2.3/transformer_engine/pytorch/attention/dot_product_attention/utils.py#L108
  # https://github.com/facebookresearch/xformers/blob/8354497deb2c04c67fbb2e2ad911e86530da0e90/xformers/ops/fmha/flash.py#L76
  "flash-attn==2.8.1",
  "emerging-optimizers==0.1.0",
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@bfded34800dfec415b71503f8205181de90b2480 ; platform_machine == 'x86_64'",
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@7febc6e25660af0f54d95dd781ecdcd62265ecca ; platform_machine == 'aarch64'",
]
nemo_gym = ["nemo_gym"]

[dependency-groups]

# This is a default group so that we install these even with bare `uv sync`
build = [
  # Build requirement for TE
  "torch==2.10.0",
  # Build requirement for TE
  "setuptools",
  "packaging",
  "einops",
  # Build requirement for nemo_run
  "hatchling",
  # Build requirement for mcore
  "pybind11",
  # Build requirement for flash-attn
  "psutil",
]
docs = [
  "sphinx",
  "sphinx-autobuild",          # For live doc serving while editing docs
  "sphinx-autodoc2",           # For documenting Python API
  "sphinx-copybutton",         # Adds a copy button for code blocks
  "sphinx-design",             # For design components in docs
  "myst_parser",               # For our markdown docs
  "nvidia-sphinx-theme",       # Our NVIDIA theme
  "gitpython>=3.1.45",         # To git-related information
  "python-dotenv",             # For environment variable management
  "sphinxcontrib-mermaid",     # For Mermaid diagram support
  "swagger-plugin-for-sphinx", # For Swagger/OpenAPI documentation
]
dev = [
  "pre-commit>=4.2.0",
  "ruff==0.9.9",
  "types-PyYAML",
  "types-requests",
  "pyrefly==0.24.2",
]
test = [
  "pytest>=8.4.2",
  "pytest-timeout",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-testmon",
]

[tool.uv.sources]
megatron-core = { workspace = true }
nemo-automodel = { path = "3rdparty/Automodel-workspace/Automodel", editable = true }
megatron-bridge = { path = "3rdparty/Megatron-Bridge-workspace", editable = true }
nemo_gym = { workspace = true }
nemo_run = { git = "https://github.com/NVIDIA-NeMo/Run", rev = "414f0077c648fde2c71bb1186e97ccbf96d6844c" }
# torch/torchaudio/torchvision/triton all come from the torch index in order to pick up aarch64 wheels
torch = [
  { index = "pytorch-cu129", marker = "sys_platform != 'darwin'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform != 'darwin'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cu129", marker = "sys_platform != 'darwin'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]
triton = [
  { index = "pytorch-cu129", marker = "sys_platform != 'darwin'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]
causal-conv1d = { git = "https://github.com/Dao-AILab/causal-conv1d", rev = "67e0a9dfe1518fc0036444e9ab5fe06ab78299e0" }
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git", rev = "d68d16ed7d5d5164eb5a57c0285f3b7eb8394ec1" }
nv-grouped-gemm = { git = "https://github.com/fanshiqing/grouped_gemm", tag = "v1.1.4.post7" }
# From JustinTong0323/sglang branch update-transformers-v5 (sgl-project/sglang#17784)
sglang = { git = "https://github.com/JustinTong0323/sglang.git", rev = "70aa688742dd2b75bf9e8e980249303f39295b0d", subdirectory = "python" }
sgl-kernel = { git = "https://github.com/JustinTong0323/sglang.git", rev = "70aa688742dd2b75bf9e8e980249303f39295b0d", subdirectory = "sgl-kernel" }

[tool.uv.workspace]
members = [
  "3rdparty/Megatron-LM-workspace",
  "3rdparty/Gym-workspace/Gym",
  # Research projects are also added here in order for them to share the global root level uv.lock.
  # If we don't do this, the research projects do not see the global uv.lock, and may mistakenly
  # install numpy>=2.0 because nemo-rl's core [dependencies] do not pin numpy, but when you inspect
  # nemo-rl's uv.lock you'll see it's 1.X b/c megatron mandates 1.X in the optional dependencies, so
  # globally we must choose 1.X otherwise we run into pickle issues from ray.
  "research/template_project",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv]
preview = true # Enable preview features like extra-build-dependencies
extra-build-variables = { sgl-kernel = { CMAKE_BUILD_PARALLEL_LEVEL = "24", FLASHINFER_CUDA_ARCH_LIST = "9.0a 10.0a", CMAKE_ARGS = "-DCMAKE_POLICY_VERSION_MINIMUM=3.5" } }
no-build-isolation-package = [
  "transformer-engine-torch",
  "transformer-engine",
  "flash-attn",
  "mamba-ssm",
  "causal-conv1d",
  "deep_gemm",
  "deep_ep",
  "nv-grouped-gemm",          # from mlm (added here to make sure it's built no isolation since mlm workspace uses setup.py)
  "sgl-kernel",
]
# Always apply the build group since dependencies like TE/mcore/nemo-run require build dependencies
# and this lets us assume they are implicitly installed with a simply `uv sync`. Ideally, we'd
# avoid including these in the default dependency set, but for now it's required.
default-groups = ["dev", "build"]
# Users may use different link-modes depending on their scenario:
#  --link-mode=hardlink (default on linux; may get warnings about switching to --link-mode copy if uv cache and venv on different file-systems)
#  --link-mode=copy (slower but more reliable; supresses warning)
#  --link-mode=symlink (fastest option when uv cache and venv on different file-system; caveat: venv is brittle since it depends on the environment/container)
link-mode = "copy"
# The TE override is needed to pin the TE version across all extras
# The opencv-python-headless override is needed because automodel pins it to 4.10.0.84, whereas vllm>=0.11.0 needs >= 4.11.0
# The timm override is needed because current automodel pins to 1.0.16. This can be removed once we move ToT automodel
# The nvidia-modelopt override is needed because mcore is still on 0.33
override-dependencies = [
  "transformer-engine[pytorch]==2.12.0",
  "nvidia-cudnn-cu12==9.19.0.56",
  "opencv-python-headless>=4.11.0",
  "timm<=1.0.22",
  "nvidia-modelopt[torch]>=0.39.0",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  # sglang has conflicting llguidance versions than vllm, so enforcing vllm's version since it's newer
  "llguidance>=1.3.0,<1.4.0",
  # Override setuptools range in other dependencies to address CVE GHSA-58pv-8j8x-9vj2
  "setuptools>=80.10.2",
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@bfded34800dfec415b71503f8205181de90b2480 ; platform_machine == 'x86_64'",
  "deep_ep @ git+https://github.com/deepseek-ai/DeepEP.git@7febc6e25660af0f54d95dd781ecdcd62265ecca ; platform_machine == 'aarch64'",
  # Pin flashinfer globally — flashinfer-python must match flashinfer-cubin at runtime, and
  # they're resolved independently by uv so ranges risk version mismatch.
  # When changing this version, check what each backend expects:
  #   vllm extra (this file, [project.optional-dependencies].vllm): flashinfer-python==0.6.4
  #   sglang dependency-metadata (this file, [[tool.uv.dependency-metadata]] name="sglang"): flashinfer_python==0.6.4, flashinfer_cubin==0.6.4
  #   megatron-core (3rdparty/Megatron-LM-workspace/Megatron-LM/pyproject.toml): flashinfer-python~=0.5.0
  "flashinfer-python==0.6.4",
  "flashinfer-cubin==0.6.4",
  # sglang pins nvidia-cutlass-dsl==4.2.1, conflicting with flashinfer 0.6.4 (>=4.3.4) and vllm (>=4.4.0.dev1).
  # Override to >=4.2.1 so uv can resolve to a version satisfying all three.
  "nvidia-cutlass-dsl>=4.2.1",
  # Relax megatron-core workspace member's opentelemetry-api ceiling (<1.34) for protobuf 6.x compat with ray
  "opentelemetry-api>=1.33.1",
  # vLLM 0.17.0 code is compatible with transformers v5 but the PyPI metadata still declares <5.
  # Override until vllm officially relaxes the constraint (https://github.com/vllm-project/vllm/issues/30466).
  "transformers==5.3.0",
  #Override till we can upgrade sglang version to address CVE GHSA-7rgv-gqhr-fxg3
  "xgrammar==0.1.33",
  # Override dependencies to address CVEs
  "mlflow>=3.9.0rc0",
  # Override outlines for Python 3.13 support
  "outlines>=0.2.0",
]
# CVE fixes
constraint-dependencies = [
  "brotli>=1.2.0",            # Address CVE GHSA-2qfp-q593-8484
  "starlette>=0.49.1",        # Address CVE GHSA-7f5h-v6xp-fcq8
  "urllib3>=2.6.3",           # Address CVE GHSA-38jv-5279-wg99
  "aiohttp>=3.13.3",          # Address CVE GHSA-mqqc-3gqh-h2x8
  "pyasn1>=0.6.3",            # Address CVE GHSA-jr27-m4p2-rc6r
  "wheel>=0.46.2",            # Address CVE GHSA-8rrh-rw8j-w5fx
  "protobuf>=6.33.5",         # Address CVE GHSA-7gcm-g887-7qv7
  "python-multipart>=0.0.22", # Address CVE GHSA-wp53-j4wj-2cfg
  "pygments>=2.20.0",         # Address CVE GHSA-5239-wwwm-4pmq
  "cbor2>=5.9.0",             # Address CVE GHSA-3c37-wwvx-h642
  "onnx>=1.21.0rc4",          # Address CVE GHSA-hqmj-h5c6-369m
  "cryptography>=46.0.6",     # Address CVE GHSA-6w46-j5rx-g56g
  "orjson>=3.11.6",           # Address CVE GHSA-hx9q-6w63-j58v
  "pyjwt>=2.12.0",            # Address CVE GHSA-752w-5fwx-jx9f
]

conflicts = [
  [
    { extra = "fsdp" },
    { extra = "sglang" },
  ],
  [
    { extra = "automodel" },
    { extra = "sglang" },
  ],
  [
    { extra = "mcore" },
    { extra = "sglang" },
  ],
  [
    { extra = "vllm" },
    { extra = "sglang" },
  ],
  [
    { extra = "automodel" },
    { extra = "fsdp" },
  ],
  [
    { extra = "automodel" },
    { extra = "mcore" },
  ],
  [
    { extra = "automodel" },
    { extra = "vllm" },
  ],
  [
    { extra = "vllm" },
    { extra = "mcore" },
  ],
]


# Augment build dependencies for packages that need torch at build time
[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
# Git-sourced packages CAN use match-runtime = true if we provide dependency-metadata
deep_ep = [{ requirement = "torch", match-runtime = true }]
deep_gemm = [{ requirement = "torch", match-runtime = true }]
transformer-engine = [{ requirement = "torch", match-runtime = true }]
transformer-engine-torch = [{ requirement = "torch", match-runtime = true }]
mamba-ssm = [{ requirement = "torch", match-runtime = true }]
causal-conv1d = [{ requirement = "torch", match-runtime = true }]
nv-grouped-gemm = [{ requirement = "torch", match-runtime = true }]
sgl-kernel = [{ requirement = "torch", match-runtime = true }]

# Needed when building from source
[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops", "setuptools", "psutil", "ninja"]

[[tool.uv.dependency-metadata]]
name = "causal-conv1d"
# This version has to match the version in the commit/rev/tag used
version = "1.5.4"
requires-dist = ["torch", "packaging", "ninja"]

[[tool.uv.dependency-metadata]]
name = "mamba-ssm"
# This version has to match the version in the commit/rev/tag used
version = "2.2.6.post3"
requires-dist = ["torch", "packaging", "ninja", "causal-conv1d"]

[[tool.uv.dependency-metadata]]
name = "deep_ep"
# This version has to match the version in the commit/rev/tag used
version = "v1.2.1+bfded34"
requires-dist = ["torch", "packaging", "ninja"]

[[tool.uv.dependency-metadata]]
name = "deep_gemm"
# This version has to match the version in the commit/rev/tag used
version = "v2.0.0+7b6b556"
requires-dist = ["torch", "packaging", "ninja"]

[[tool.uv.dependency-metadata]]
name = "nv-grouped-gemm"
# This version has to match the version in the commit/rev/tag used
version = "v1.1.4.post7"
requires-dist = ["setuptools", "wheel", "torch", "numpy"]


[[tool.uv.dependency-metadata]]
name = "sgl-kernel"
# This version has to match the version in the commit/rev/tag used
version = "0.3.21"
requires-dist = ["torch", "scikit-build-core", "wheel"]

[[tool.uv.dependency-metadata]]
name = "sglang"
# VCS install from JustinTong0323/sglang@update-transformers-v5
# Version is dynamic (setuptools-scm), so uv cannot resolve deps from the VCS source automatically.
# This requires-dist list must be kept in sync with the fork's python/pyproject.toml [project].dependencies.
# Source: https://github.com/JustinTong0323/sglang/blob/70aa688742dd2b75bf9e8e980249303f39295b0d/python/pyproject.toml
version = "0.5.7.dev0"
requires-dist = [
  "IPython",
  "aiohttp",
  "apache-tvm-ffi>=0.1.5,<0.2",
  "anthropic>=0.20.0",
  "blobfile==3.0.0",
  "build",
  "compressed-tensors",
  "cuda-python==12.9",
  "decord2",
  "datasets",
  "einops",
  "fastapi",
  "flashinfer_python==0.6.4",
  "flashinfer_cubin==0.6.4",
  "gguf",
  "interegular",
  "llguidance>=0.7.11,<0.8.0",
  "modelscope",
  "msgspec",
  "ninja",
  "numpy",
  "nvidia-cutlass-dsl>=4.3.4",
  "nvidia-ml-py",
  "openai-harmony==0.0.4",
  "openai==2.6.1",
  "orjson",
  "outlines==0.1.11",
  "packaging",
  "partial_json_parser",
  "pillow",
  "prometheus-client>=0.20.0",
  "psutil",
  "py-spy",
  "pybase64",
  "pydantic",
  "python-multipart",
  "pyzmq>=25.1.2",
  "quack-kernels==0.2.4",
  "requests",
  "scipy",
  "sentencepiece",
  "setproctitle",
  "sgl-kernel==0.3.21",
  "soundfile==0.13.1",
  "tiktoken",
  "timm==1.0.16",
  "torch_memory_saver==0.0.9",
  "torch==2.9.1",
  "torchao==0.9.0",
  "torchaudio==2.9.1",
  "torchcodec==0.8.0 ; sys_platform != 'linux' or (sys_platform == 'linux' and platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l')",
  "torchvision",
  "tqdm",
  "transformers==5.3.0",
  "uvicorn",
  "uvloop",
  "xgrammar==0.1.27",
  "smg-grpc-proto>=0.3.3",
  "grpcio>=1.78.0",
  "grpcio-reflection>=1.78.0",
  "grpcio-health-checking>=1.78.0",
]

[[tool.uv.dependency-metadata]]
name = "megatron-bridge"
# Static metadata so the root resolver handles megatron-bridge's deps
# (avoids workspace-member name-shadowing for megatron-core).
# Must stay in sync with 3rdparty/Megatron-Bridge-workspace/setup.py::CACHED_DEPENDENCIES.
version = "0.0.0"
requires-dist = [
  "transformers>=5.0.0,<=5.3.0",
  "peft>=0.18.1",
  "datasets>=2.20.0",
  "accelerate",
  "diffusers>=0.36.0",
  "peft>=0.18.0",
  "einops",
  "imageio",
  "imageio-ffmpeg",
  "omegaconf>=2.3.0",
  "tensorboard>=2.19.0",
  "typing-extensions",
  "rich",
  "wandb>=0.25.0",
  "six>=1.17.0",
  "regex>=2024.11.6",
  "pyyaml>=6.0.2",
  "tqdm>=4.67.1",
  "hydra-core>1.3,<=1.3.2",
  # megatron-core omitted here: it's a workspace member and already a direct dep of the mcore extra.
  # Non-workspace path deps cannot depend on workspace members (uv name-shadowing restriction).
  "qwen-vl-utils",
  # TODO(https://github.com/NVIDIA-NeMo/RL/issues/2111): upgrade to core_cu13 when we move to CUDA 13
  "transformer-engine[pytorch,core_cu12]",
  "mamba-ssm",
  "nvidia-resiliency-ext~=0.5.0",
  "causal-conv1d",
  "flash-linear-attention",
  "timm",
  "open-clip-torch>=3.2.0",
  "mlflow>=3.5.0",
  "comet-ml>=3.50.0",
  "torch>=2.6.0",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
)/
'''

[tool.pytest.ini_options]
addopts = "--testmon --durations=100 -s -rA -x"
#addopts = "--durations=100 -s -rA -x"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
  "run_first: marks tests that should run before others",
  "mcore: marks tests that require the mcore extra",
  "hf_gated: marks tests that require HuggingFace token access for gated models",
  "automodel: marks tests that require the automodel extra",
  "vllm: marks tests that require the vllm extra",
  "sglang: marks tests that require the sglang extra",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = ["/tmp/*"]

[tool.coverage.paths]
source = ["nemo_rl/", "/opt/nemo-rl/nemo_rl/"]

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
select = ["D", "F"]

# - On top of the Google convention, disable `D417`, which requires
#   documentation for every function parameter.
# - F841: local variable assigned but never used (exluced to favor readability)
# TODO: Remove D10 once we are about to release to get all the docstrings written
ignore = ["D417", "D10", "F841"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Section to exclude errors for different file types
[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = ["D"]
# Ignore all files that end in `_test.py`.
"*_test.py" = ["D"]
# Ignore F401 (import but unused) in __init__.py
"__init__.py" = ["F401"]
